--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,20 @@
 <!-- home.html -->
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <link href="css/home.css" rel="stylesheet">
 <head>
   <title>Моя страница</title>
 </head>
 <body>
   <header>
-    <img src="img/logo.jpg" width="64" height="68" alt="Логотип">
-      <h1>Инженер-программист</h1>
+    <img src="img/logo.jpg" width="100" height="100" alt="Логотип">
+      <h1>EnginProgr</h1>
   </header>
   <main>
   <section class="desc">
       <nav class="desc-nav">
         <ul>
-            <li><a href="/">Главная</a></li>
+            <li><a href="home.html">Главная</a></li>
             <li><a href="/demand">Востребованность</a></li>
             <li><a href="#">География</a></li>
             <li><a href="#">Навыки</a></li>
